--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -78,8 +78,25 @@ $yellow-900: #4d4d00;
 $yellow: #b3b300;
 
 // Main Colors
+$primary-color: $violet-500;
+$primary-color-opacity: rgba($primary-color, 0.5);
+$primary-color-opacity-200: rgba($primary-color, 0.25);
+$primary-color-dark: $violet-700;
+
+$hover-color: $primary-color;
+$hover-color-secondary: rgba($primary-color, 0.1);
+
+$white-color: $violet-100;
+$black-color: $gray-900;
+$black-color-opacity: rgba($gray-900, 0.5);
+
+$disabled-color: $gray-500;
+$disabled-color-secondary: rgba($gray-500, 0.1);
+
+// Text Colors
 $background-color: $violet-900;
-$text-color: $violet-100;
+$text-color: $white-color;
+$text-secondary: $violet-300;
 
 // Spacing
 $spacing-0-5: 4px;
@@ -108,7 +125,7 @@ $border-radius-xl: 16px;
 $border-radius: $border-radius-xl;
 
 // Sidebar
-$sidebar-width: 240px;
+$sidebar-width: 260px;
 
 // Transition
 $base-transition-duration: 225ms;
