--- a/src/components/navigation-sidebar/NavigationSidebar.module.scss
+++ b/src/components/navigation-sidebar/NavigationSidebar.module.scss
@@ -6,16 +6,22 @@
 
     height: 100vh;
     width: $sidebar-width;
+    padding-top: $spacing-5;
+    padding-left: $spacing-5;
 
     background-color: $background-color;
     border-right: 1px solid $violet-800;
     transition: left 0.3s ease-in-out;
 
     @media (max-width: $screen-md) {
+        visibility: hidden;
         left: -100%;
         border-right: none;
+        width: 100%;
+        padding: $spacing-5;
 
         &--open {
+            visibility: visible;
             left: 0;
         }
     }
