--- a/src/components/content-wrapper/ContentWrapper.module.scss
+++ b/src/components/content-wrapper/ContentWrapper.module.scss
@@ -1,6 +1,7 @@
 @import 'styles/variables.scss';
 
 .main {
+    position: relative;
     height: 100vh;
     width: calc(100vw - #{$sidebar-width});
     margin-left: $sidebar-width;
