error boundary added

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -13,3 +13,15 @@ a {
     color: $text-color;
     text-decoration: none;
 }
+
+.red-color {
+    color: $red-300 !important;
+}
+
+.primary-color {
+    color: $primary-color !important;
+}
+
+.white-color {
+    color: $white-color !important;
+}
