--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,4 +1,5 @@
 // Screens
+// NOTE: should be synchronized with constants/screenSizes.ts
 $screen-sm: 480px;
 $screen-md: 767px;
 $screen-lg: 1023px;
